# meow-hook

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  README.md
include/meow_hook/: detour.h  memory.h  pattern_search.h  util.h
src/: detour.cc  detour_x86.cc  detour_x86_64.cc  instruction_set.cc  instruction_set.h  main.cc  memory.cc  pattern_cache.cc  pattern_cache.h  pattern_search.cc
